# paperslave

./: .gitmodules  Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
font/: subset.sh
src/: adjust.rs  fb.rs  main.rs  paper.rs  thread.rs
